--- a/src/styles/toolbar.css
+++ b/src/styles/toolbar.css
@@ -24,6 +24,7 @@
   width: 100%;
   padding: 8px;
   font-family: 'PT Sans Narrow', sans-serif;
+  z-index: 800;
 }
 
 
